@@ -404,6 +404,9 @@ jobs:
       TEST_NAME: virtual-machine
     steps:
       - checkout
+      - run:
+          name: wait for starter
+          command: docker exec -it cfy_manager cfy_manager wait-for-starter
       - run_integration_tests_505
 
   eks_integration_tests_505:
@@ -414,6 +417,9 @@ jobs:
       TEST_NAME: eks
     steps:
       - checkout
+      - run:
+          name: wait for starter
+          command: docker exec -it cfy_manager cfy_manager wait-for-starter
       - run_integration_tests_505
 
   hw_integration_tests_505:
@@ -424,6 +430,9 @@ jobs:
       TEST_NAME: hello-world
     steps:
       - checkout
+      - run:
+          name: wait for starter
+          command: docker exec -it cfy_manager cfy_manager wait-for-starter
       - run_integration_tests_505
 
   cf_integration_tests_510:
@@ -434,6 +443,9 @@ jobs:
       TEST_NAME: cloudformation
     steps:
       - checkout
+      - run:
+          name: wait for starter
+          command: docker exec -it cfy_manager cfy_manager wait-for-starter
       - run_integration_tests_510
 
   eks_integration_tests_510:
@@ -444,6 +456,9 @@ jobs:
       TEST_NAME: eks
     steps:
       - checkout
+      - run:
+          name: wait for starter
+          command: docker exec -it cfy_manager cfy_manager wait-for-starter
       - run_integration_tests_510
 
   hw_integration_tests_510:
@@ -454,6 +469,9 @@ jobs:
       TEST_NAME: hello-world
     steps:
       - checkout
+      - run:
+          name: wait for starter
+          command: docker exec -it cfy_manager cfy_manager wait-for-starter
       - run_integration_tests_510
 
   release:
