@@ -3719,3 +3719,10 @@ relationships:
       cloudify.interfaces.relationship_lifecycle:
         establish: { implementation: aws.cloudify_aws.ec2.resources.ebs.attach_using_relationship }
         unlink: { implementation: aws.cloudify_aws.ec2.resources.ebs.detach_using_relationship }
+
+  cloudify.relationships.aws.route_table.contained_in:
+    derived_from: cloudify.relationships.contained_in
+    source_interfaces:
+      cloudify.interfaces.relationship_lifecycle:
+        preconfigure:
+          implementation: aws.cloudify_aws.ec2.resources.routetable.attach_as_main
